[package]
name = "fallout-equestria-tactics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug = [

]
inspector = [
    
]

[dependencies]
bevy = "0.9"
bevy_renet = "0.0.6"
bevy_turborand = "0.4"
rand = "0.8"
bevy_common_assets = { version = "0.4", features = [ "json" ] }
bincode = "1.3.1"
serde = { version = "1.0", features = [ "derive" ] }
